# 2d-shadows

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: gl.c.0228992D512EE2C1.idx  gl.h.DE571D1A19933213.idx  khrplatform.h.924E8EDC678FACE2.idx  main.cpp.ADC5E54E84E63131.idx
glad/include/glad/: gl.h
